-XX:MaxDirectMemorySize